Nov 29, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move help menu item to the left

Nov 28, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- split up load_pixmap in load_pixmap, load_pixmap_as_pixmap and
  load_pixmap_as_pixbuf
- set minimize icon as suggested by Jordi (someone know how to make this
  work properly with windowmaker?)
- work around gcc complaining about %c in strftime

Nov 27, 2003: Alex <alex_b@users.sourceforge.net>
- Changed version to 0.9.13.1

Nov 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- released 0.9.13

Nov 24, 2003: Jordi Mallach <jordi@sindominio.net>
- update Spanish translation

Nov 23, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- remove the static option again, would link everything static *sigh*
- update docu, use mozilla function for table of contents

Nov 22, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- link GeoIP statically when using ./configure --enable-geoip=static
- fix wrong function argument in rcon.c

Nov 19, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- allow data and localedir to be overridden via environment variables

Nov 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add Call of Duty master from Activision

Nov 16, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation

Nov 16, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update german translation
- add custom arguments for FragOps UT2 mod

Nov 16, 2003: Alex <alex_b@users.sourceforge.net>
- Added Luca Camillo <kamy at tutorials.it> to the help about screen
  for submitted logos

Nov 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for Call of Duty (wine, no official master)
- update docu
- remove useless gamespy game listings
- add note that the savage script has to be modified (needs translation)
- update german translation

Nov 06, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- update docu

Nov 01, 2003: Ludwig Nussel <l-n@users.sourceforge.net>